<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>crazyflie</name>
  <version>0.0.1</version>
  <description>ROS integration for Crazyflie Nano Quadcopter from Bitcraze</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/crazyflie</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  
  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <exec_depend>crazyflie_cpp</exec_depend>
  <exec_depend>crazyflie_driver</exec_depend>
  <exec_depend>crazyflie_description</exec_depend>
  <exec_depend>crazyflie_controller</exec_depend>
  <exec_depend>crazyflie_demo</exec_depend>
  <exec_depend>crazyflie_tools</exec_depend>

</package>
